# pyri-vision-browser

./: README.md  pyproject.toml  setup.py
src/pyri/vision_browser/components/: camera_list_component.html  camera_list_component.py  camera_viewer_component.html  camera_viewer_component.py  vision_components.py
src/pyri/vision_browser/dialogs/: new_calibrate_extrinsic_dialog.html  new_calibrate_extrinsic_dialog.py  new_calibrate_extrinsic_dialog2.html  new_calibrate_intrinsic_dialog.html  new_calibrate_intrinsic_dialog.py  new_calibrate_intrinsic_dialog2.html  new_calibrate_robot_origin_dialog.html  new_calibrate_robot_origin_dialog.py  new_calibrate_robot_origin_dialog2.html  new_image_roi_dialog.html  new_image_roi_dialog.py  new_image_template_dialog.html  new_image_template_dialog.py  vision_variable_dialogs.py
src/pyri/vision_browser/panels/: camera_viewer_panel.html  cameras_panel.html  vision_panel.py  vision_panels.py
