[project]

name = "pyri-vision-browser"
version = "0.3.0"
description = "PyRI Teach Pendant WebUI Browser Vision"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["pyodide", "pyri-project", "pyri-webui", "pyri-webui-browser-package", "robotics"]
authors = [
    {name = "John Wason", email = "wason@wasontech.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    'pyri-common',        
    'importlib-resources==5.13.0'       
]

[project.urls]
homepage="http://pyri.tech"
repository="https://github.com/pyri-project/pyri-vision-browser"

[project.entry-points."pyri.plugins.webui_browser_panel"]
pyri-vision-browser = "pyri.vision_browser.panels.vision_panels:get_webui_browser_panel_factory"

[project.entry-points."pyri.plugins.webui_browser_component"]
pyri-vision-browser = "pyri.vision_browser.components.vision_components:get_webui_browser_component_factory"

[project.entry-points."pyri.plugins.webui_browser_variable_dialog"]
pyri-vision-browser = "pyri.vision_browser.dialogs.vision_variable_dialogs:get_webui_browser_variable_dialog_factory"


[build-system]
build-backend = 'setuptools.build_meta'
requires = [
    'setuptools',
    'toml',
]


[tool.setuptools.package-data]
'pyri.vision_browser.panels' = ['*.html']
'pyri.vision_browser.components' = ['*.html']
'pyri.vision_browser.dialogs' = ['*.html']